data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3530.wast
;; 9. **Test Description:** Verify a sequence of `br_if` and `call` where the call should be skipped if the stack contains a specific value. Differing evaluations in `wizard_engine` should catch the incorrect `WebAssembly` condition leading to unintended call execution. Specific Constraint:** Value-based branching decisions.

(assert_invalid
  (module
    (func $br_if_call_test
      (param i32)
      (br_if 0 (local.get 0))
      (call 1 (i32.const 1)))
    (func (param i32))
  )
  "invalid result type"
)